crates/carta/tests/snapshots/golden_writer__revealjs__common__definition-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<dl>
<dt>Term</dt>
<dd>
<p>Definition one</p>
</dd>
<dd>
<p>Definition two</p>
</dd>
</dl>
</section>
