crates/carta/tests/snapshots/golden_writer__revealjs__common__definition-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<dl>
<dt>Term</dt>
<dd>
Definition one
</dd>
<dd>
Definition two
</dd>
</dl>
</section>
