crates/carta/tests/snapshots/golden_writer__revealjs__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<dl>
<dt>term: with colon</dt>
<dd>
definition
</dd>
</dl>
</section>
