crates/carta/tests/snapshots/golden_writer__revealjs__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<div class="note">
<p>be careful here</p>
</div>
</section>
