crates/carta/tests/snapshots/golden_writer__revealjs__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<div id="d" class="note">
<p>body paragraph</p>
</div>
</section>
