crates/carta/tests/snapshots/golden_writer__revealjs__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><strong>bold</strong> opens the line</p>
<p>*literal star</p>
</section>
