crates/carta/tests/snapshots/golden_writer__revealjs__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><em>see <a href="http://example.com">text</a> here</em></p>
</section>
