crates/carta/tests/snapshots/golden_writer__revealjs__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>a * b ` c | d and trailing_ref_</p>
</section>
