crates/carta/tests/snapshots/golden_writer__revealjs__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>ref<a href="#/fn1" class="footnote-ref" id="fnref1"
role="doc-noteref"><sup>1</sup></a></p>
</section>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1"><pre><code>code only</code></pre>
<a href="#/fnref1" class="footnote-back" role="doc-backlink">↩︎</a></li>
</ol>
</section>
